--- a/mongo.yaml
+++ b/mongo.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
       - name: mongodb
         image: mongo:5.0
+        volumeMounts:
+         - name: mongo-persetent-storage
+          mountPath: /data/db
+      volumes:
+        - name: mongo-persetent-storage
+          persistentVolumeClaim: 
+           claimName: mongo-pvc
         ports:
         - containerPort: 27017
         env:
