--- a/storage.yaml
+++ b/storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: task-pv-volume
+  name: loccal-storage
   labels:
     type: local
 spec:
@@ -12,6 +12,7 @@ spec:
     - ReadWriteOnce
   hostPath:
     path: "/mnt/data"
+    type: DirectoryOrCreate
 
 ---
 apiVersion: v1
